--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Khuldoonqataesheh.github.io/frontend",
   "name": "frontend",
   "version": "0.1.0",
   "main": "src/index.js",
