--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Khuldoonqataesheh.github.io/frontend",
+  "homepage": "https://MERAKI-Academy-Dominators.github.io/frontend",
   "name": "frontend",
   "version": "0.1.0",
   "main": "src/index.js",
